# telisq

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  init-command.md  telisq-PRD.md
.kilo/plans/: 1775418878637-happy-wizard.md
.kilocode/rules-architect/: AGENTS.md
.kilocode/rules-ask/: AGENTS.md
.kilocode/rules-code/: AGENTS.md
.kilocode/rules-debug/: AGENTS.md
.kilocode/rules-orchestrator/: AGENTS.md
.kilocode/rules-review/: AGENTS.md
.kilocode/skills-architect/architecture-diagram-generator/: SKILL.md
.kilocode/skills-architect/tradeoff-documenter/: SKILL.md
.kilocode/skills-ask/clarify-requirements/: SKILL.md
.kilocode/skills-ask/context-documentation/: SKILL.md
.kilocode/skills-ask/tradeoff-analyzer/: SKILL.md
.kilocode/skills-docs-specialist/Documentation-consistency-checker/: SKILL.md
.kilocode/skills-docs-specialist/api-doc-generator/: SKILL.md
.kilocode/skills-orchestrator/dependency-mapper/: SKILL.md
.kilocode/skills-orchestrator/progress-tracker/: SKILL.md
.kilocode/skills-orchestrator/task-decomposer/: SKILL.md
.kilocode/skills-review/code-quality-auditor/: SKILL.md
.kilocode/skills-review/security-scanner/: SKILL.md
.kilocode/skills-review/test-coverage-analyzer/: SKILL.md
.kilocode/workflows/: serena-dev-workflow.md  serena-general.md  serena-setup.md
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  implementation_status_2026_04.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md  tui_fix_2026_04.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: doctor.rs  index.rs  mod.rs  plan.rs  run.rs  session.rs  status.rs  tests.rs
cli/src/tui/: app.rs  events.rs  mod.rs
cli/src/tui/components/: agent_panel.rs  index_bar.rs  mod.rs  plan_view.rs  session_view.rs  sidebar.rs
core/: Cargo.toml
core/src/: lib.rs  orchestrator.rs  patcher.rs
core/src/agents/: ask_agent.rs  code_agent.rs  mod.rs  plan_agent.rs  review_agent.rs
core/src/llm/: client.rs  mod.rs  stream.rs  tools.rs  types.rs
core/src/session/: mod.rs  store.rs
core/tests/: code_agent_test.rs
docs/: release-checklist.md
index/: Cargo.toml
index/src/: crawler.rs  embedder.rs  lib.rs  store.rs  watcher.rs
mcp/: Cargo.toml
mcp/src/: lib.rs  protocol.rs  registry.rs  server.rs  tools.rs
plan/: Cargo.toml
plan/src/: graph.rs  lib.rs  parser.rs  tracker.rs  validator.rs
plans/: 00-implementation-master-plan.md  01-shared-plan-engine.md  02-mcp-llm-index.md  03-agents-orchestrator.md  04-cli-tui-sessions.md  05-testing-release.md  06-full-implementation-plan.md
shared/: Cargo.toml
shared/src/: brief.rs  config.rs  errors.rs  lib.rs  types.rs
tests/fixtures/plans/: dependency.plan.md  simple.plan.md
tests/integration/: llm_mock_test.rs  mcp_mock_test.rs  orchestrator_test.rs  session_test.rs
tests/unit/: config_test.rs  patcher_test.rs  plan_graph_test.rs  plan_parser_test.rs  plan_tracker_test.rs
