[workspace]
members = [
    "shared",
    "plan",
    "mcp",
    "core",
    "cli",
    "index",
]

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tempfile = "3.10"
walkdir = "2.5"
lazy_static = "1.4"
regex = "1.10"
color-eyre = { version = "0.6", features = ["capture-spantrace", "default"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
pathdiff = "0.2"
uuid = { version = "1.8", features = ["serde", "v4"] }
once_cell = "1.19"
tap = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
notify = "6.1"
async-trait = "0.1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "uuid"] }

# Testing dependencies
assert-json-diff = "2.0"
mockall = "0.12"
rstest = "0.18"
test-log = "0.2"
tempdir = "0.3"

[workspace.package]
edition = "2021"
version = "1.0.0"
authors = ["Your Name <you@example.com>"]
license = "MIT"
description = "Telisq - Structured planning and execution engine"
readme = "README.md"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
codegen-units = 256
panic = 'unwind'
incremental = true
backtrace = "full"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
codegen-units = 1
panic = 'abort'
incremental = false
backtrace = "full"
